--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:tracker
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.datasource.name=tracker
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
 
