add reset password function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,9 @@ spring.datasource.name=tracker
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
-
+#Email data
+spring.mail.host=smtp.gmail.com
+spring.mail.username=zajac5569@gmail.com
+spring.mail.password=!Blog123
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
