--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=93c8c373d4e7796571213482c18f86f58b11cb7c4f45ed885d194
 spring.datasource.name=tracker
 
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 #Email data
 spring.mail.host=smtp.gmail.com
